# Cpp2023

func/: CMakeLists.txt  func.conf  main.cpp  test.cpp
func/lib/: const_func.h  exp_func.h  func.h  ident_func.h  polynomial_func.h  power_func.h  util_func.h
tasks/: task1.cpp  task2.cpp  task3.cpp
